# contracts

./: Cargo.toml  README.md
.github/workflows/: ci.yml
codegen/: Cargo.toml
codegen/src/: main.rs
fixtures/: capability-manifest.json
fixtures/events/: lifecycle_transition.json  link_added.json  link_broken.json  link_removed.json  node_created.json  node_removed.json  node_renamed.json  slot_changed.json
fixtures/msg/: minimal.json
schemas/: flow.schema.json  node.schema.json
spi/: Cargo.toml
spi/proto/: extension.proto
spi/schemas/: flow.schema.json  node.schema.json
spi/src/: artifacts.rs  auth.rs  backup.rs  capabilities.rs  facets.rs  fleet.rs  ids.rs  lib.rs  msg.rs  presentation.rs  slot_schema.rs  subject.rs  units.rs
spi/tests/: contract_fixtures_msg.rs
src/: auth.rs  capabilities.rs  component.rs  containment.rs  facets.rs  fleet.rs  ids.rs  lib.rs  log.rs  manifest.rs  msg.rs  slot_schema.rs  subject.rs
tests/: contract_fixtures_msg.rs
ui-ir/: Cargo.toml
ui-ir/src/: component.rs  lib.rs
wit/: plugin.wit
