[package]
name = "spi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
semver = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serde_yml = { workspace = true }

[package.metadata.spi]
# Non-Rust artifacts ship alongside the crate:
#   proto/extension.proto     — gRPC schema for extensions
#   schemas/flow.schema.json  — flow document format (schema_version: 1)
#   schemas/node.schema.json  — node manifest format
