[workspace]
resolver = "2"
members = [
    "spi",
    "ui-ir",
    "codegen",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
publish = true

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.dependencies]
# Workspace crates
listo-spi = { path = "spi" }

# Third-party
async-trait = "0.1"
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
schemars = { version = "0.8", features = ["derive"] }
semver = { version = "1", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt"] }
uuid = { version = "1", features = ["v4", "serde"] }
# Type-safe unit conversion — backs the `StaticRegistry` in
# `spi::units`. See `agent/docs/design/USER-PREFERENCES.md` § "Library
# choices". Compile-time dimensional analysis is an implementation
# detail inside the registry; the `Quantity`/`Unit` enums on the wire
# do not expose any `uom` types.
uom = { version = "0.36", default-features = false, features = ["autoconvert", "f64", "si", "std"] }
