[package]
name = "listo-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "codegen"
path = "src/main.rs"

[dependencies]
listo-spi = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
