[package]
name = "listo-spi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "spi"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
futures-core = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
semver = { workspace = true }
uom = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serde_yml = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[package.metadata.spi]
# Non-Rust artifacts ship alongside the crate:
#   schemas/flow.schema.json  — flow document format (schema_version: 1)
#   schemas/node.schema.json  — node manifest format
#
# The extension gRPC schema used to live here (`proto/extension.proto`)
# but moved into `agent/crates/transport-grpc/proto/` — the only
# build-time consumer — so it ships in the transport-grpc crate tarball
# instead of requiring a sibling-repo checkout.
